--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,26 @@ body{
   margin: 0;
   padding: 0;
 }
+
+select {
+  width: 100%;
+  margin-top: 1em;
+  appearance: none;
+  border: 0;
+  outline: 0;
+  height: 25px;
+  padding: 0 4em 0 1em;
+  background: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg) no-repeat right 0.8em center / 1.4em, linear-gradient(to left, lightgray 3em, lightgray 3em);
+  color: inherit;
+  cursor: pointer;
+  option {
+    color: inherit;
+    background-color: lightgray;
+  }
+  &:focus {
+    outline: none;
+  }
+  &::-ms-expand {
+    display: none;
+  }
+}
