--- a/src/app/components/edit-excercise/edit-excercise.component.scss
+++ b/src/app/components/edit-excercise/edit-excercise.component.scss
@@ -27,9 +27,9 @@ form {
             }
         }
 
-        .form-group-secotor {
+        .form-group-section {
             width: 100%;
-            &:nth-child(-n+2) {
+            &:nth-child(-n+3) {
                 margin-right: .5em;
             }
         }
@@ -38,24 +38,6 @@ form {
             color: red;
         }
         
-    }
-
-    input[type=text] {
-        color: rgba(0,0,0,.87);
-        border-bottom-color: rgba(0,0,0,.42);
-        box-sizing: border-box;
-        width: 100%;
-        padding: 16px 16px 6px;
-        border: none;
-        border-bottom: 1px solid;
-        outline: none;
-        :hover{
-            border-bottom-color: rgba(0,0,0,.87);
-            background: #ececec;
-        }
-        :focus{
-            border-color: #6200ee;
-        }
     }
 }
                    
