--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,21 @@ select {
     display: none;
   }
 }
+
+input {
+  color: rgba(0,0,0,.87);
+  border-bottom-color: rgba(0,0,0,.42);
+  box-sizing: border-box;
+  width: 100%;
+  padding: 16px 16px 6px;
+  border: none;
+  border-bottom: 1px solid;
+  outline: none;
+  :hover{
+      border-bottom-color: rgba(0,0,0,.87);
+      background: #ececec;
+  }
+  :focus{
+      border-color: #6200ee;
+  }
+}
