--- a/src/app/components/edit-excercise/edit-excercise.component.html
+++ b/src/app/components/edit-excercise/edit-excercise.component.html
@@ -3,8 +3,8 @@
       <div>Name</div>
       <input type="text" formControlName="name"/>
       <div *ngIf="submitted && excerciseF['name'].errors">
-        <div  class="invalid-field" *ngIf="excerciseF['name'].errors['required']">name is required</div>
-        <div  class="invalid-field" *ngIf="excerciseF['name'].errors['maxlength']">name has to contain less than 50 characters</div>
+        <small class="invalid-field" *ngIf="excerciseF['name'].errors['required']">name is required</small>
+        <small class="invalid-field" *ngIf="excerciseF['name'].errors['maxlength']">name has to contain less than 50 characters</small>
       </div>
     </div>
     
@@ -16,7 +16,7 @@
         </option>
       </select>
       <div *ngIf="submitted && excerciseF['joint'].errors">
-        <div  class="invalid-field" *ngIf="excerciseF['joint'].errors['required']">joint is required</div>
+        <small  class="invalid-field" *ngIf="excerciseF['joint'].errors['required']">joint is required</small>
       </div>
     </div>
   
@@ -48,17 +48,17 @@
         <label for="name">min</label>
         <input #min type="number" formControlName="min"/>
         <div *ngIf="submitted && signalF['min'].errors">
-          <div class="invalid-field" *ngIf="signalF['min'].errors['required']">Minumum number is required</div>
+          <small class="invalid-field" *ngIf="signalF['min'].errors['required']">Minumum number is required</small>
         </div>
         <div *ngIf="submitted && excerciseF['signal'].errors">
-          <div class="invalid-field" *ngIf="excerciseF['signal'].errors['minNotLower']">Min has to be lower than max</div>
+          <small class="invalid-field" *ngIf="excerciseF['signal'].errors['minNotLower']">Min has to be lower than max</small>
         </div>
       </div>
        <div class="form-group-section">
         <label for="name">max</label>
         <input #max type="number" formControlName="max"/>
         <div *ngIf="submitted && signalF['max'].errors">
-          <div class="invalid-field" *ngIf="signalF['max'].errors['required']">Maximum number is required</div>
+          <small class="invalid-field" *ngIf="signalF['max'].errors['required']">Maximum number is required</small>
         </div>
        </div>
        <div class="form-group-section">
@@ -68,7 +68,10 @@
     </div>
     
     <div class="form-group">
-      <button [disabled]="loading" class="btn btn-primary">Submit</button>
+      <button [disabled]="loading" class="btn btn-primary">Submit</button> 
+
+      <!-- http post feedback message -->
+      <p *ngIf="response" [ngClass]="response?.id ? 'post_success' : 'post_fail'">{{response?.id ? 'Excercise has been modified' : 'Could not modify excercise, try later'}}</p>
     </div>
   </form>
 
